--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hello World</h1>
+<h1>Hello World 2</h1>
 <form [formGroup]="testForm" (ngSubmit)="onSubmit(testForm)">
   <mat-form-field>
     <input matInput placeholder="Some Input" formControlName="something" />
