Adds route support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1>Hello World</h1>
-<form [formGroup]="testForm" (ngSubmit)="onSubmit(testForm)">
-  <mat-form-field>
-    <input matInput placeholder="Some Input" formControlName="something" />
-  </mat-form-field>
-  <button type="submit" mat-raised-button color="primary">submit</button>
-</form>
+<router-outlet></router-outlet>
