Renames app to Kraken

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -23,19 +23,19 @@
 <h2>Icon Buttons</h2>
 <div>
   <button mat-icon-button>
-    <mat-icon aria-label="Example icon-button with a fire icon">whatshot</mat-icon>
+    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
   </button>
   <button mat-icon-button color="primary">
-    <mat-icon aria-label="Example icon-button with a fire icon primary color">whatshot</mat-icon>
+    <mat-icon aria-label="Example icon-button with a mood icon primary color">mood</mat-icon>
   </button>
   <button mat-icon-button color="accent">
-    <mat-icon aria-label="Example icon-button with a fire icon accent color">whatshot</mat-icon>
+    <mat-icon aria-label="Example icon-button with a pets icon accent color">pets</mat-icon>
   </button>
   <button mat-icon-button color="warn">
-    <mat-icon aria-label="Example icon-button with a fire icon warm color">whatshot</mat-icon>
+    <mat-icon aria-label="Example icon-button with a star icon warm color">star</mat-icon>
   </button>
   <button mat-icon-button disabled>
-    <mat-icon aria-label="Example icon-button with a fire icon disabled">whatshot</mat-icon>
+    <mat-icon aria-label="Example icon-button with a face icon disabled">face</mat-icon>
   </button>
 </div>
 
