Cleans up imports and continues building outline button

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -64,3 +64,8 @@
   </button>
   <a mat-mini-fab routerLink=".">Link</a>
 </div>
+
+<h2>Outline Buttons</h2>
+<div>
+  <button appOutlineButton>Basic</button>
+</div>
