Fixes problems with router

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -7,7 +7,7 @@
   <button mat-button color="accent">Accent</button>
   <button mat-button color="warn">Warn</button>
   <button mat-button disabled>Disabled</button>
-  <a mat-button routerLink=".">Link</a>
+  <a mat-button routerLink="/">Link</a>
 </div>
 
 <h2>Raised Buttons</h2>
@@ -17,7 +17,7 @@
   <button mat-raised-button color="accent">Accent</button>
   <button mat-raised-button color="warn">Warn</button>
   <button mat-raised-button disabled>Disabled</button>
-  <a mat-raised-button routerLink=".">Link</a>
+  <a mat-raised-button routerLink="/">Link</a>
 </div>
 
 <h2>Icon Buttons</h2>
@@ -49,7 +49,7 @@
   <button mat-fab>
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
   </button>
-  <a mat-fab routerLink=".">Link</a>
+  <a mat-fab routerLink="/">Link</a>
 </div>
 
 <h2>Mini Fab Buttons</h2>
@@ -62,10 +62,15 @@
   <button mat-mini-fab>
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
   </button>
-  <a mat-mini-fab routerLink=".">Link</a>
+  <a mat-mini-fab routerLink="/">Link</a>
 </div>
 
 <h2>Outline Buttons</h2>
 <div>
-  <button appOutlineButton>Basic</button>
+  <button app-outline-button>Basic</button>
+  <button app-outline-button color="primary">Primary</button>
+  <button app-outline-button color="accent">Accent</button>
+  <button app-outline-button color="warn">Warn</button>
+  <button app-outline-button disabled>Disabled</button>
+  <a app-outline-button routerLink="/">Link</a>
 </div>
