--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -6,6 +6,8 @@ $primary: map-get($deeporange-teal-amber-theme, primary);
 $warn: map-get($deeporange-teal-amber-theme, warn);
 
 .kr-btn {
+  background-color: transparent;
+  border: none;
   border-radius: 2px;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   box-sizing: border-box;
@@ -24,10 +26,21 @@ $warn: map-get($deeporange-teal-amber-theme, warn);
   user-select: none;
   vertical-align: bottom;
   white-space: nowrap;
+
+  &.kr-primary {
+    background-color: mat-color($primary);
+  }
+
+  &.kr-accent {
+    background-color: mat-color($accent);
+  }
+
+  &.kr-warn {
+    background-color: mat-color($warn);
+  }
 }
 
 .kr-outline-btn {
-  background-color: transparent;
   border: 2px solid black;
   padding: 0px 16px;
 
@@ -37,6 +50,10 @@ $warn: map-get($deeporange-teal-amber-theme, warn);
 
   &:active {
     box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
+  }
+
+  &.kr-primary, &.kr-accent, &.kr-warn {
+    background-color: transparent;
   }
 
   &.kr-primary {
@@ -53,4 +70,8 @@ $warn: map-get($deeporange-teal-amber-theme, warn);
     border-color: mat-color($warn);
     color: mat-color($warn);
   }
+}
+
+.kr-rounded-btn {
+  border-radius: 30px;
 }
