--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -6,7 +6,7 @@ $primary: map-get($deeporange-teal-amber-theme, primary);
 $warn: map-get($deeporange-teal-amber-theme, warn);
 
 .kr-btn {
-  background-color: transparent;
+  background-color: white;
   border: none;
   border-radius: 2px;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
@@ -29,14 +29,17 @@ $warn: map-get($deeporange-teal-amber-theme, warn);
 
   &.kr-primary {
     background-color: mat-color($primary);
+    color: mat-contrast($deeporange-teal-amber-theme-primary, 500);
   }
 
   &.kr-accent {
     background-color: mat-color($accent);
+    color: mat-contrast($deeporange-teal-amber-theme-accent, 500);
   }
 
   &.kr-warn {
     background-color: mat-color($warn);
+    color: mat-contrast($deeporange-teal-amber-theme-warn, 500);
   }
 }
 
@@ -53,7 +56,7 @@ $warn: map-get($deeporange-teal-amber-theme, warn);
   }
 
   &.kr-primary, &.kr-accent, &.kr-warn {
-    background-color: transparent;
+    background-color: white;
   }
 
   &.kr-primary {
