switches from app to kr

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -22,32 +22,32 @@
 
 <h2>Rounded Buttons</h2>
 <div>
-  <button app-rounded-button>Basic</button>
-  <button app-rounded-button color="primary">Primary</button>
-  <button app-rounded-button color="accent">Accent</button>
-  <button app-rounded-button color="warn">Warn</button>
-  <button app-rounded-button disabled>Disabled</button>
-  <a app-rounded-button routerLink="/">Link</a>
+  <button kr-rounded-button>Basic</button>
+  <button kr-rounded-button color="primary">Primary</button>
+  <button kr-rounded-button color="accent">Accent</button>
+  <button kr-rounded-button color="warn">Warn</button>
+  <button kr-rounded-button disabled>Disabled</button>
+  <a kr-rounded-button routerLink="/">Link</a>
 </div>
 
 <h2>Outline Buttons</h2>
 <div>
-  <button app-outline-button>Basic</button>
-  <button app-outline-button color="primary">Primary</button>
-  <button app-outline-button color="accent">Accent</button>
-  <button app-outline-button color="warn">Warn</button>
-  <button app-outline-button disabled>Disabled</button>
-  <a app-outline-button routerLink="/">Link</a>
+  <button kr-outline-button>Basic</button>
+  <button kr-outline-button color="primary">Primary</button>
+  <button kr-outline-button color="accent">Accent</button>
+  <button kr-outline-button color="warn">Warn</button>
+  <button kr-outline-button disabled>Disabled</button>
+  <a kr-outline-button routerLink="/">Link</a>
 </div>
 
 <h2>Rounded Outline Buttons</h2>
 <div>
-  <button app-rounded-button outline>Basic</button>
-  <button app-rounded-button outline color="primary">Primary</button>
-  <button app-rounded-button outline color="accent">Accent</button>
-  <button app-rounded-button outline color="warn">Warn</button>
-  <button app-rounded-button outline disabled>Disabled</button>
-  <a app-rounded-button outline routerLink="/">Link</a>
+  <button kr-rounded-outline-button>Basic</button>
+  <button kr-rounded-outline-button color="primary">Primary</button>
+  <button kr-rounded-outline-button color="accent">Accent</button>
+  <button kr-rounded-outline-button color="warn">Warn</button>
+  <button kr-rounded-outline-button disabled>Disabled</button>
+  <a kr-rounded-outline-button routerLink="/">Link</a>
 </div>
 
 <h2>Icon Buttons</h2>
