Adds custom icon buttons

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -1,6 +1,6 @@
 <h1>Buttons</h1>
 
-<h2>Basic buttons</h2>
+<h2>Basic buttons - Angular Material</h2>
 <div>
   <button mat-button>Basic</button>
   <button mat-button color="primary">Primary</button>
@@ -10,7 +10,7 @@
   <a mat-button routerLink="/">Link</a>
 </div>
 
-<h2>Raised Buttons</h2>
+<h2>Raised Buttons - Angular Material</h2>
 <div>
   <button mat-raised-button>Basic</button>
   <button mat-raised-button color="primary">Primary</button>
@@ -53,16 +53,16 @@
 <h2>Button Sizes</h2>
 <div>
   <button mat-raised-button color="primary" krButtonSize="large">Large</button>
-  <button krOutlineButton color="primary" krButtonSize="large">Large</button>
+  <button krRoundedOutlineButton color="primary" krButtonSize="large">Large</button>
   <button mat-raised-button color="accent">Default</button>
-  <button krOutlineButton color="accent">Default</button>
+  <button krRoundedOutlineButton color="accent">Default</button>
   <button mat-raised-button color="warn" krButtonSize="small">Small</button>
-  <button krOutlineButton color="warn" krButtonSize="small">Small</button>
+  <button krRoundedOutlineButton color="warn" krButtonSize="small">Small</button>
   <button mat-raised-button krButtonSize="extra-small">Extra Small</button>
-  <button krOutlineButton krButtonSize="extra-small">Extra Small</button>
+  <button krRoundedOutlineButton krButtonSize="extra-small">Extra Small</button>
 </div>
 
-<h2>Icon Buttons</h2>
+<h2>Icon Buttons - Angular Material</h2>
 <div>
   <button mat-icon-button>
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
@@ -81,7 +81,45 @@
   </button>
 </div>
 
-<h2>Fab Buttons</h2>
+<h2>Round Icon Buttons</h2>
+<div>
+  <button krIconButton>
+    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+  </button>
+  <button krIconButton color="primary">
+    <mat-icon aria-label="Example icon-button with a mood icon primary color">mood</mat-icon>
+  </button>
+  <button krIconButton color="accent">
+    <mat-icon aria-label="Example icon-button with a pets icon accent color">pets</mat-icon>
+  </button>
+  <button krIconButton color="warn">
+    <mat-icon aria-label="Example icon-button with a star icon warm color">star</mat-icon>
+  </button>
+  <button krIconButton disabled>
+    <mat-icon aria-label="Example icon-button with a face icon disabled">face</mat-icon>
+  </button>
+</div>
+
+<h2>Filled Outline Icon Buttons</h2>
+<div>
+  <button krOutlineIconButton>
+    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+  </button>
+  <button krOutlineIconButton color="primary">
+    <mat-icon aria-label="Example icon-button with a mood icon primary color">mood</mat-icon>
+  </button>
+  <button krOutlineIconButton color="accent">
+    <mat-icon aria-label="Example icon-button with a pets icon accent color">pets</mat-icon>
+  </button>
+  <button krOutlineIconButton color="warn">
+    <mat-icon aria-label="Example icon-button with a star icon warm color">star</mat-icon>
+  </button>
+  <button krOutlineIconButton disabled>
+    <mat-icon aria-label="Example icon-button with a face icon disabled">face</mat-icon>
+  </button>
+</div>
+
+<h2>Fab Buttons - Angular Material</h2>
 <div>
   <button mat-fab>Basic</button>
   <button mat-fab color="primary">Primary</button>
@@ -94,7 +132,7 @@
   <a mat-fab routerLink="/">Link</a>
 </div>
 
-<h2>Mini Fab Buttons</h2>
+<h2>Mini Fab Buttons - Angular Material</h2>
 <div>
   <button mat-mini-fab>Basic</button>
   <button mat-mini-fab color="primary">Primary</button>
