cleans up icon buttons and turns into fab button

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -81,42 +81,17 @@
   </button>
 </div>
 
-<h2>Round Icon Buttons</h2>
+<h2>Outline Fab Buttons</h2>
 <div>
-  <button krIconButton>
-    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+  <button krOutlineFabButton>Basic</button>
+  <button krOutlineFabButton color="primary">Primary</button>
+  <button krOutlineFabButton color="accent">Accent</button>
+  <button krOutlineFabButton color="warn">Warn</button>
+  <button krOutlineFabButton disabled>Disabled</button>
+  <button krOutlineFabButton color="accent">
+    <mat-icon aria-label="Example icon-button with a face icon disabled">pets</mat-icon>
   </button>
-  <button krIconButton color="primary">
-    <mat-icon aria-label="Example icon-button with a mood icon primary color">mood</mat-icon>
-  </button>
-  <button krIconButton color="accent">
-    <mat-icon aria-label="Example icon-button with a pets icon accent color">pets</mat-icon>
-  </button>
-  <button krIconButton color="warn">
-    <mat-icon aria-label="Example icon-button with a star icon warm color">star</mat-icon>
-  </button>
-  <button krIconButton disabled>
-    <mat-icon aria-label="Example icon-button with a face icon disabled">face</mat-icon>
-  </button>
-</div>
-
-<h2>Filled Outline Icon Buttons</h2>
-<div>
-  <button krOutlineIconButton>
-    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
-  </button>
-  <button krOutlineIconButton color="primary">
-    <mat-icon aria-label="Example icon-button with a mood icon primary color">mood</mat-icon>
-  </button>
-  <button krOutlineIconButton color="accent">
-    <mat-icon aria-label="Example icon-button with a pets icon accent color">pets</mat-icon>
-  </button>
-  <button krOutlineIconButton color="warn">
-    <mat-icon aria-label="Example icon-button with a star icon warm color">star</mat-icon>
-  </button>
-  <button krOutlineIconButton disabled>
-    <mat-icon aria-label="Example icon-button with a face icon disabled">face</mat-icon>
-  </button>
+  <a krOutlineFabButton routerLink="/" color="accent">Link</a>
 </div>
 
 <h2>Fab Buttons - Angular Material</h2>
