--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 
 @include mat-core();
 
-@import 'themes/deeporange-teal-amber.color-theme.scss';
+@import 'themes/deeporange-teal.color-theme.scss';
 
 .kr-theme {
-  @include angular-material-theme($deeporange-teal-amber-theme);
+  @include angular-material-theme($deeporange-teal-theme);
 }
