--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import '../themes/deeporange-teal.color-theme.scss';
+@import '../themes/deeporange-teal.theme.scss';
 @import 'vars.scss';
 
 $accent: map-get($deeporange-teal-theme, accent);
