Fixes styles for horizontal button group

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -1,6 +1,6 @@
-<h1>Buttons</h1>
+<h2>Buttons</h2>
 
-<h2>Basic buttons - Angular Material</h2>
+<h3>Basic buttons - Angular Material</h3>
 <div>
   <button mat-button>Basic</button>
   <button mat-button color="primary">Primary</button>
@@ -10,7 +10,7 @@
   <a mat-button routerLink="/">Link</a>
 </div>
 
-<h2>Raised Buttons - Angular Material</h2>
+<h3>Raised Buttons - Angular Material</h3>
 <div>
   <button mat-raised-button>Basic</button>
   <button mat-raised-button color="primary">Primary</button>
@@ -20,7 +20,7 @@
   <a mat-raised-button routerLink="/">Link</a>
 </div>
 
-<h2>Rounded Buttons</h2>
+<h3>Rounded Buttons</h3>
 <div>
   <button krRoundedButton>Basic</button>
   <button krRoundedButton color="primary">Primary</button>
@@ -30,7 +30,7 @@
   <a krRoundedButton routerLink="/">Link</a>
 </div>
 
-<h2>Outline Buttons</h2>
+<h3>Outline Buttons</h3>
 <div>
   <button krOutlineButton>Basic</button>
   <button krOutlineButton color="primary">Primary</button>
@@ -40,7 +40,7 @@
   <a krOutlineButton routerLink="/">Link</a>
 </div>
 
-<h2>Rounded Outline Buttons</h2>
+<h3>Rounded Outline Buttons</h3>
 <div>
   <button krRoundedOutlineButton>Basic</button>
   <button krRoundedOutlineButton color="primary">Primary</button>
@@ -50,7 +50,7 @@
   <a krRoundedOutlineButton routerLink="/">Link</a>
 </div>
 
-<h2>Button Sizes</h2>
+<h3>Button Sizes</h3>
 <div>
   <button mat-raised-button color="primary" krButtonSize="large">Large</button>
   <button krRoundedOutlineButton color="primary" krButtonSize="large">Large</button>
@@ -62,7 +62,7 @@
   <button krRoundedOutlineButton krButtonSize="extra-small">Extra Small</button>
 </div>
 
-<h2>Icon Buttons - Angular Material</h2>
+<h3>Icon Buttons - Angular Material</h3>
 <div>
   <button mat-icon-button>
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
@@ -81,7 +81,7 @@
   </button>
 </div>
 
-<h2>Outline Fab Buttons</h2>
+<h3>Outline Fab Buttons</h3>
 <div>
   <button krOutlineFabButton>Basic</button>
   <button krOutlineFabButton color="primary">Primary</button>
@@ -94,7 +94,7 @@
   <a krOutlineFabButton routerLink="/" color="accent">Link</a>
 </div>
 
-<h2>Fab Buttons - Angular Material</h2>
+<h3>Fab Buttons - Angular Material</h3>
 <div>
   <button mat-fab>Basic</button>
   <button mat-fab color="primary">Primary</button>
@@ -107,7 +107,7 @@
   <a mat-fab routerLink="/">Link</a>
 </div>
 
-<h2>Mini Fab Buttons - Angular Material</h2>
+<h3>Mini Fab Buttons - Angular Material</h3>
 <div>
   <button mat-mini-fab>Basic</button>
   <button mat-mini-fab color="primary">Primary</button>
@@ -118,4 +118,14 @@
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
   </button>
   <a mat-mini-fab routerLink="/">Link</a>
+</div>
+
+<h2>Button Groups</h2>
+
+<h3>Horizontal Group</h3>
+<div krButtonGroup>
+  <button krOutlineButton color="primary">Left</button>
+  <button krOutlineButton color="primary">Middle</button>
+  <button krOutlineButton color="primary">Middle</button>
+  <a krOutlineButton routerLink="/" color="primary">Link</a>
 </div>
