Adds vertical button group

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -122,8 +122,16 @@
 
 <h2>Button Groups</h2>
 
-<h3>Horizontal Group</h3>
+<h3>Horizontal Button Group</h3>
 <div krButtonGroup>
+  <button krOutlineButton color="primary">Left</button>
+  <button krOutlineButton color="primary">Middle</button>
+  <button krOutlineButton color="primary">Middle</button>
+  <a krOutlineButton routerLink="/" color="primary">Link</a>
+</div>
+
+<h3>Vertical Buton Group</h3>
+<div krButtonGroup vertical>
   <button krOutlineButton color="primary">Left</button>
   <button krOutlineButton color="primary">Middle</button>
   <button krOutlineButton color="primary">Middle</button>
