--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -137,11 +137,21 @@ a.kr-btn, .kr-fab-btn.kr-outline-btn {
 .kr-button-group {
   display: flex;
   flex-direction: row;
+
+  &.kr-vertical-group {
+    flex-direction: column;
+    max-width: 100px;
+  }
 }
 
 .kr-button-group * {
   border-radius: 0px;
   border-right: none;
+}
+
+.kr-button-group.kr-vertical-group * {
+  border-bottom: none;
+  border-right: 2px solid;
 }
 
 .kr-button-group *:first-child {
@@ -151,4 +161,8 @@ a.kr-btn, .kr-fab-btn.kr-outline-btn {
 .kr-button-group *:last-child {
   border-radius: 0px 2px 2px 0px;
   border-right: 2px solid;
+}
+
+.kr-button-group.kr-vertical-group *:last-child {
+  border-bottom: 2px solid;
 }
