Switches to accent color for button groups

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -124,16 +124,16 @@
 
 <h3>Horizontal Button Group</h3>
 <div krButtonGroup>
-  <button krOutlineButton color="primary">Left</button>
-  <button krOutlineButton color="primary">Middle</button>
-  <button krOutlineButton color="primary">Middle</button>
-  <a krOutlineButton routerLink="/" color="primary">Link</a>
+  <button krOutlineButton color="accent">Left</button>
+  <button krOutlineButton color="accent">Middle</button>
+  <button krOutlineButton color="accent">Middle</button>
+  <a krOutlineButton routerLink="/" color="accent">Link</a>
 </div>
 
 <h3>Vertical Buton Group</h3>
 <div krButtonGroup vertical>
-  <button krOutlineButton color="primary">Left</button>
-  <button krOutlineButton color="primary">Middle</button>
-  <button krOutlineButton color="primary">Middle</button>
-  <a krOutlineButton routerLink="/" color="primary">Link</a>
+  <button krOutlineButton color="accent">Left</button>
+  <button krOutlineButton color="accent">Middle</button>
+  <button krOutlineButton color="accent">Middle</button>
+  <a krOutlineButton routerLink="/" color="accent">Link</a>
 </div>
