--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -126,7 +126,9 @@
 <div krButtonGroup>
   <button krOutlineButton color="accent">Left</button>
   <button krOutlineButton color="accent">Middle</button>
-  <button krOutlineButton color="accent">Middle</button>
+  <button krOutlineButton color="accent">
+    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+  </button>
   <a krOutlineButton routerLink="/" color="accent">Link</a>
 </div>
 
@@ -134,6 +136,8 @@
 <div krButtonGroup vertical>
   <button krOutlineButton color="accent">Left</button>
   <button krOutlineButton color="accent">Middle</button>
-  <button krOutlineButton color="accent">Middle</button>
+  <button krOutlineButton color="accent">
+    <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+  </button>
   <a krOutlineButton routerLink="/" color="accent">Link</a>
 </div>
