Adds button toggle groups

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -122,6 +122,48 @@
 
 <h2>Button Groups</h2>
 
+<h3>Button Toggle Group - Angular Material</h3>
+<div>
+  <mat-button-toggle-group>
+    <mat-button-toggle value="whatshot" checked="true">
+      <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="mood">
+      <mat-icon aria-label="Example icon-button with a mood icon">mood</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="pets">
+      <mat-icon aria-label="Example icon-button with a pets icon">pets</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="star">
+      <mat-icon aria-label="Example icon-button with a star icon">star</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="face">
+      <mat-icon aria-label="Example icon-button with a face icon">face</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
+
+<h3>Vertical Button Toggle Group - Angular Material</h3>
+<div>
+  <mat-button-toggle-group vertical>
+    <mat-button-toggle value="whatshot" checked="true">
+      <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="mood">
+      <mat-icon aria-label="Example icon-button with a mood icon">mood</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="pets">
+      <mat-icon aria-label="Example icon-button with a pets icon">pets</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="star">
+      <mat-icon aria-label="Example icon-button with a star icon">star</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="face">
+      <mat-icon aria-label="Example icon-button with a face icon">face</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
+
 <h3>Horizontal Button Group</h3>
 <div krButtonGroup>
   <button krOutlineButton color="accent">Left</button>
