Seperates button styles out

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,173 +1,5 @@
-@import '~@angular/material/theming';
-@import '../themes/deeporange-teal.theme.scss';
-@import 'vars.scss';
-
-$accent: map-get($deeporange-teal-theme, accent);
-$primary: map-get($deeporange-teal-theme, primary);
-$warn: map-get($deeporange-teal-theme, warn);
-
-button:disabled {
-  cursor: not-allowed !important; // Overrides material
-}
-
-.kr-btn {
-  background-color: white;
-  border: none;
-  border-radius: 2px;
-  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  line-height: 36px;
-  min-width: 88px;
-  outline: none;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: background .4s cubic-bezier(.25,.8,.25,1), box-shadow 280ms cubic-bezier(.4,0,.2,1);
-  user-select: none;
-  vertical-align: baseline;
-  white-space: nowrap;
-
-  &:disabled {
-    background-color: rgba(0,0,0,.12);
-  }
-
-  &.kr-primary {
-    background-color: mat-color($primary);
-    color: mat-contrast($deeporange-teal-theme-primary, 500);
-  }
-
-  &.kr-accent {
-    background-color: mat-color($accent);
-    color: mat-contrast($deeporange-teal-theme-accent, 500);
-  }
-
-  &.kr-warn {
-    background-color: mat-color($warn);
-    color: mat-contrast($deeporange-teal-theme-warn, 500);
-  }
-}
-
-a.kr-btn, .kr-fab-btn.kr-outline-btn {
-  vertical-align: bottom;
-}
-
-.kr-large-btn {
-  font-size: 24px !important; // Overrides Angular Material
-  line-height: 45px !important; // Overrides Angular Material
-  min-width: 125px !important; // Overrides Angular Material
-}
-
-.kr-small-btn {
-  font-size: 12px !important; // Overrides Angular Material
-  line-height: 28px !important; // Overrides Angular Material
-  min-width: 75px !important; // Overrides Angular Material
-}
-
-.kr-extra-small-btn {
-  font-size: 10px !important; // Overrides Angular Material
-  line-height: 22px !important; // Overrides Angular Material
-  min-width: 50px !important; // Overrides Angular Material
-}
-
-.kr-fab-btn {
-  align-items: center;
-  border-radius: $icon-button-size;
-  display: inline-flex;
-  flex-direction: column;
-  height: $icon-button-size;
-  justify-content: center;
-  min-width: $icon-button-size;
-  width: $icon-button-size;
-}
-
-.kr-outline-btn {
-  border: 2px solid black;
-  line-height: 32px;
-  padding: 0px 16px;
-
-  &:disabled {
-    border-color: rgba(0,0,0,.42);
-  }
-
-  &.kr-large-btn {
-    line-height: 41px !important; // Overrides .kr-large-button
-  }
-
-  &.kr-small-btn {
-    line-height: 24px !important; // Overrides .kr-large-button
-  }
-
-  &.kr-extra-small-btn {
-    line-height: 18px !important; // Overrides .kr-large-button
-  }
-
-  &:active {
-    box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
-  }
-
-  &.kr-primary, &.kr-accent, &.kr-warn {
-    background-color: white;
-  }
-
-  &.kr-primary {
-    border-color: mat-color($primary);
-    color: mat-color($primary);
-  }
-
-  &.kr-accent {
-    border-color: mat-color($accent);
-    color: mat-color($accent);
-  }
-
-  &.kr-warn {
-    border-color: mat-color($warn);
-    color: mat-color($warn);
-  }
-}
-
-.kr-rounded-btn {
-  border-radius: 30px;
-}
-
-.kr-button-group {
-  display: flex;
-  flex-direction: row;
-
-  &.kr-vertical-group {
-    flex-direction: column;
-    max-width: 100px;
-  }
-}
-
-.kr-button-group>* {
-  align-items: center;
-  border-radius: 0px;
-  border-right: none;
-  display: flex;
-  justify-content: center;
-  min-width: $icon-font-size;
-}
-
-.kr-button-group.kr-vertical-group>* {
-  border-bottom: none;
-  border-right: 2px solid;
-  min-height: 34px;
-}
-
-.kr-button-group>*:first-child {
-  border-radius: 2px 0px 0px 2px;
-}
-
-.kr-button-group>*:last-child {
-  border-radius: 0px 2px 2px 0px;
-  border-right: 2px solid;
-}
-
-.kr-button-group.kr-vertical-group>*:last-child {
-  border-bottom: 2px solid;
-}
+@import 'buttons/_base-button.scss';
+@import 'buttons/_button-group.scss';
+@import 'buttons/_fab-button.scss';
+@import 'buttons/_outline-button.scss';
+@import 'buttons/_rounded-button.scss';
