--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,13 @@
+@import '~@angular/material/theming';
+@import '../themes/deeporange-teal.theme.scss';
+
 // Buttons
 $icon-button-size: 56px;
 
 // Material Defaults
 $icon-font-size: 24px;
+
+// Theme
+$accent: map-get($deeporange-teal-theme, accent);
+$primary: map-get($deeporange-teal-theme, primary);
+$warn: map-get($deeporange-teal-theme, warn);
