Adds dropdown components

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -183,3 +183,12 @@
   </button>
   <a krOutlineButton routerLink="/" color="accent">Link</a>
 </div>
+
+<h3>Dropdown Button</h3>
+<div>
+  <kr-button-dropdown label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+</div>
